Created template submission platform for neural networks

--- a/references.bib
+++ b/references.bib
@@ -1190,3 +1190,49 @@
 
 
 
+
+
+@article{debroy-2015-graph-heals,
+  author =       {Sanghamitra Debroy and V. Pavan Kumar Miriyala and
+                  K. Vijaya Sekhar and Swati Ghosh Acharyya and Amit
+                  Acharyya},
+  title =        {Graphene Heals Thy Cracks},
+  journal =      {Computational Materials Science},
+  volume =       109,
+  number =       {nil},
+  pages =        {84-89},
+  year =         2015,
+  doi =          {10.1016/j.commatsci.2015.05.025},
+  url =          {http://dx.doi.org/10.1016/j.commatsci.2015.05.025},
+  DATE_ADDED =   {Mon Jul 25 22:58:20 2016},
+}
+
+@article{meng-2014-mechan-metal,
+  author =       {Lijuan Meng and Jian Jiang and Jinlan Wang and Feng
+                  Ding},
+  title =        {Mechanism of Metal Catalyzed Healing of Large
+                  Structural Defects in Graphene},
+  journal =      {J. Phys. Chem. C},
+  volume =       118,
+  number =       1,
+  pages =        {720-724},
+  year =         2014,
+  doi =          {10.1021/jp409471a},
+  url =          {http://dx.doi.org/10.1021/jp409471a},
+  DATE_ADDED =   {Mon Aug 1 16:38:37 2016},
+}
+
+@article{tsetseris-2009-adatom-compl,
+  author =       {L. Tsetseris and S.T. Pantelides},
+  title =        {Adatom Complexes and Self-Healing Mechanisms on
+                  Graphene and Single-Wall Carbon Nanotubes},
+  journal =      {Carbon},
+  volume =       47,
+  number =       3,
+  pages =        {901-908},
+  year =         2009,
+  doi =          {10.1016/j.carbon.2008.12.002},
+  url =          {http://dx.doi.org/10.1016/j.carbon.2008.12.002},
+  DATE_ADDED =   {Mon Aug 1 21:40:38 2016},
+}
+
