Remove duplicate energy structures

--- a/references.bib
+++ b/references.bib
@@ -1236,3 +1236,92 @@
   DATE_ADDED =   {Mon Aug 1 21:40:38 2016},
 }
 
+@article{stuart-2000-react-poten,
+  author =       {Steven J. Stuart and Alan B. Tutein and Judith
+                  A. Harrison},
+  title =        {A Reactive Potential for Hydrocarbons With
+                  Intermolecular Interactions},
+  journal =      {The Journal of Chemical Physics},
+  volume =       112,
+  number =       14,
+  pages =        6472,
+  year =         2000,
+  doi =          {10.1063/1.481208},
+  url =          {http://dx.doi.org/10.1063/1.481208},
+  DATE_ADDED =   {Mon Aug 8 14:00:18 2016},
+}
+
+@article{brenner-2002-secon-gener,
+  author =       {Donald W Brenner and Olga A Shenderova and Judith A
+                  Harrison and Steven J Stuart and Boris Ni and Susan
+                  B Sinnott},
+  title =        {A Second-Generation Reactive Empirical Bond Order
+                  (rebo) Potential Energy Expression for Hydrocarbons},
+  journal =      {Journal of Physics: Condensed Matter},
+  volume =       14,
+  number =       4,
+  pages =        {783-802},
+  year =         2002,
+  doi =          {10.1088/0953-8984/14/4/312},
+  url =          {http://dx.doi.org/10.1088/0953-8984/14/4/312},
+  DATE_ADDED =   {Mon Aug 8 14:11:56 2016},
+}
+
+@article{duin-2001-reaxf,
+  author =       {Adri C. T. van Duin and Siddharth Dasgupta and
+                  Francois Lorant and William A. Goddard},
+  title =        {Reaxff: A Reactive Force Field for Hydrocarbons},
+  journal =      {J. Phys. Chem. A},
+  volume =       105,
+  number =       41,
+  pages =        {9396-9409},
+  year =         2001,
+  doi =          {10.1021/jp004368u},
+  url =          {http://dx.doi.org/10.1021/jp004368u},
+  DATE_ADDED =   {Mon Aug 8 14:24:40 2016},
+}
+
+@article{tersoff-1988-new-empir,
+  author =       {J. Tersoff},
+  title =        {New Empirical Approach for the Structure and Energy
+                  of Covalent Systems},
+  journal =      {Phys. Rev. B},
+  volume =       37,
+  number =       12,
+  pages =        {6991-7000},
+  year =         1988,
+  doi =          {10.1103/physrevb.37.6991},
+  url =          {http://dx.doi.org/10.1103/PhysRevB.37.6991},
+  DATE_ADDED =   {Mon Aug 8 14:31:19 2016},
+}
+
+@article{brenner-1990-empir-poten,
+  author =       {Donald W. Brenner},
+  title =        {Empirical Potential for Hydrocarbons for Use in
+                  Simulating the Chemical Vapor Deposition of Diamond
+                  Films},
+  journal =      {Phys. Rev. B},
+  volume =       42,
+  number =       15,
+  pages =        {9458-9471},
+  year =         1990,
+  doi =          {10.1103/physrevb.42.9458},
+  url =          {http://dx.doi.org/10.1103/PhysRevB.42.9458},
+  DATE_ADDED =   {Mon Aug 8 14:32:59 2016},
+}
+
+@article{oconnor-2015-aireb-m,
+  author =       {Thomas C. O'Connor and Jan Andzelm and Mark
+                  O. Robbins},
+  title =        {Airebo-M: A Reactive Model for Hydrocarbons At
+                  Extreme Pressures},
+  journal =      {The Journal of Chemical Physics},
+  volume =       142,
+  number =       2,
+  pages =        024903,
+  year =         2015,
+  doi =          {10.1063/1.4905549},
+  url =          {http://dx.doi.org/10.1063/1.4905549},
+  DATE_ADDED =   {Mon Aug 8 14:35:50 2016},
+}
+
